tests/syntax_error/first_line_indent.jou
    def foo() -> None:  # Error: expected an expression, got more indentation
    return

# TODO: this error message is not very good...
